--- a/blog.html
+++ b/blog.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Blog - Marko - Digital Marketing Agency</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="image/favicon.ico">
+    <link rel="icon" href="./image/fav.png">
     <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
