--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Home - Digital Marketing Agency</title>
     <link rel="stylesheet" href="css/style.css">
-    <link rel="icon" href="./image/logo.png">
+    <link rel="icon" href="./image/fav.png">
     <!-- Font Awesome CDN -->
 <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
@@ -42,7 +42,7 @@
   </video>
                
                 <div class="hero-container position-relative">
-                    <div class="d-flex flex-column gspace-2">
+                    <div class="d-flex flex-column gspace-2 py-5">
                         <h1 class="title-heading-banner animate-box animated animate__animated" data-animate="animate__fadeInLeft">We Build Websites That Rank,
 Convert, and Scale
 Your Business
