--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Your Business
                                     <div class="chooseus-spacer above"></div>
                                     <div class="chooseus-icon-layout">
                                         <div class="chooseus-icon">
-                                            <img src="image/Icon-2.png" alt="Why Choose Us Icon" class="img-fluid">
+                                            <img src="image/Icon-2.png" alt="Why Choose Us Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                     <div class="chooseus-spacer below"></div>
@@ -319,7 +319,7 @@ Your Business
                                     <div class="chooseus-spacer above"></div>
                                     <div class="chooseus-icon-layout">
                                         <div class="chooseus-icon">
-                                            <img src="image/icon-1.png" alt="Why Choose Us Icon" class="img-fluid">
+                                            <img src="image/icon-1.png" alt="Why Choose Us Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                     <div class="chooseus-spacer below"></div>
@@ -338,7 +338,7 @@ Your Business
                                     <div class="chooseus-spacer above"></div>
                                     <div class="chooseus-icon-layout">
                                         <div class="chooseus-icon">
-                                            <img src="image/Icon-3.png" alt="Why Choose Us Icon" class="img-fluid">
+                                            <img src="image/Icon-3.png" alt="Why Choose Us Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                     <div class="chooseus-spacer below"></div>
@@ -428,7 +428,7 @@ Your Business
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-2.png" alt="SEO Service Icon" class="img-fluid">
+                                            <img src="image/Icon-2.png" alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -456,7 +456,7 @@ Your Business
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-4.png" alt="Website Development Icon" class="img-fluid">
+                                            <img src="image/Icon-4.png" alt="Website Development Icon"alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -484,7 +484,7 @@ Your Business
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-7.png" alt="Mobile App Development Icon" class="img-fluid">
+                                            <img src="image/Icon-7.png" alt="Mobile App Development Icon"alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -512,7 +512,7 @@ Your Business
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-4.png" alt="Web Application Development Icon" class="img-fluid">
+                                            <img src="image/Icon-4.png" alt="Web Application Development Icon"alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -540,7 +540,7 @@ Your Business
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-5.png" alt="Performance Marketing Icon" class="img-fluid">
+                                            <img src="image/Icon-5.png" alt="Performance Marketing Icon"alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -568,7 +568,7 @@ Your Business
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-6.png" alt="Video Production Icon" class="img-fluid">
+                                            <img src="image/Icon-6.png" alt="Video Production Icon"alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -596,7 +596,7 @@ Your Business
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-7.png" alt="Social Media Management Icon" class="img-fluid">
+                                            <img src="image/Icon-7.png" alt="Social Media Management Icon"alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -871,7 +871,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-13.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-13.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid ">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">Emma Richard</span>
@@ -897,7 +897,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-8.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-8.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid ">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">David Mont</span>
@@ -923,7 +923,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-11.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-11.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">Sophia Lewis</span>
@@ -949,7 +949,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-12.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-12.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">James Peterson</span>
@@ -975,7 +975,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-13.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-13.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid ">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">Emma Richard</span>
@@ -1001,7 +1001,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-8.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-8.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">David Mont</span>
@@ -1027,7 +1027,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-11.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-11.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid ">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">Sophia Lewis</span>
@@ -1053,7 +1053,7 @@ Your Business
                                         <div class="d-flex flex-row align-items-center justify-content-between">
                                             <div class="d-flex flex-row gspace-2">
                                                 <div class="testimonial-image">
-                                                    <img src="image/Photo-12.jpg" alt="Testimonial Image" class="img-fluid">
+                                                    <img src="image/Photo-12.jpg" alt="Testimonial Image"alt="SEO Service Icon" class="img-fluid ">
                                                 </div>
                                                 <div class="d-flex flex-column">
                                                     <span class="profile-name">James Peterson</span>
@@ -1109,7 +1109,7 @@ Your Business
                                         <div class="digital-process-step animate-box animated animate__animated" data-animate="animate__fadeInUp">
                                             <div class="d-flex justify-content-between">
                                                 <div>
-                                                    <img src="image/digital-marketing-icons-N952ZWA.png" alt="Digital Proccess Icon" class="process-icon">
+                                                    <img src="image/digital-marketing-icons-N952ZWA.png" alt="Digital Proccess Icon"class="process-icon colored-icon">
                                                 </div>
                                                 <span>01</span>
                                             </div>
@@ -1127,7 +1127,7 @@ Your Business
                                             <div class="digital-process-step">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <img src="image/Icon-11.png" alt="Digital Process Icon" class="process-icon">
+                                                        <img src="image/Icon-11.png" alt="Digital Process Icon"class="process-icon colored-icon">
                                                     </div>
                                                     <span>02</span>
                                                 </div>
@@ -1146,7 +1146,7 @@ Your Business
                                             <div class="digital-process-step">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <img src="image/Icon-10.png" alt="Digital Process Icon" class="process-icon">
+                                                        <img src="image/Icon-10.png" alt="Digital Process Icon"class="process-icon colored-icon">
                                                     </div>
                                                     <span>03</span>
                                                 </div>
@@ -1165,7 +1165,7 @@ Your Business
                                             <div class="digital-process-step">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <img src="image/Icon-12.png" alt="Digital Process Icon" class="process-icon">
+                                                        <img src="image/Icon-12.png" alt="Digital Process Icon"class="process-icon colored-icon">
                                                     </div>
                                                     <span>04</span>
                                                 </div>
