--- a/about.html
+++ b/about.html
@@ -253,7 +253,7 @@
                                     <div class="chooseus-spacer above"></div>
                                     <div class="chooseus-icon-layout">
                                         <div class="chooseus-icon">
-                                            <img src="image/Icon-2.png" alt="Why Choose Us Icon" class="img-fluid">
+                                            <img src="image/Icon-2.png" alt="Why Choose Us Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                     <div class="chooseus-spacer below"></div>
@@ -272,7 +272,7 @@
                                     <div class="chooseus-spacer above"></div>
                                     <div class="chooseus-icon-layout">
                                         <div class="chooseus-icon">
-                                            <img src="image/icon-1.png" alt="Why Choose Us Icon" class="img-fluid">
+                                            <img src="image/icon-1.png" alt="Why Choose Us Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                     <div class="chooseus-spacer below"></div>
@@ -292,7 +292,7 @@
                                     <div class="chooseus-spacer above"></div>
                                     <div class="chooseus-icon-layout">
                                         <div class="chooseus-icon">
-                                            <img src="image/Icon-3.png" alt="Why Choose Us Icon" class="img-fluid">
+                                            <img src="image/Icon-3.png" alt="Why Choose Us Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                     <div class="chooseus-spacer below"></div>
@@ -510,7 +510,7 @@
                                         <div class="digital-process-step animate-box animated animate__animated" data-animate="animate__fadeInUp">
                                             <div class="d-flex justify-content-between">
                                                 <div>
-                                                    <img src="image/digital-marketing-icons-N952ZWA.png" alt="Digital Proccess Icon" class="process-icon">
+                                                    <img src="image/digital-marketing-icons-N952ZWA.png" alt="Digital Proccess Icon" class="process-icon colored-icon">
                                                 </div>
                                                 <span>01</span>
                                             </div>
@@ -528,7 +528,7 @@
                                             <div class="digital-process-step">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <img src="image/Icon-11.png" alt="Digital Process Icon" class="process-icon">
+                                                        <img src="image/Icon-11.png" alt="Digital Process Icon" class="process-icon colored-icon">
                                                     </div>
                                                     <span>02</span>
                                                 </div>
@@ -547,7 +547,7 @@
                                             <div class="digital-process-step">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <img src="image/Icon-10.png" alt="Digital Process Icon" class="process-icon">
+                                                        <img src="image/Icon-10.png" alt="Digital Process Icon" class="process-icon colored-icon">
                                                     </div>
                                                     <span>03</span>
                                                 </div>
@@ -566,7 +566,7 @@
                                             <div class="digital-process-step">
                                                 <div class="d-flex justify-content-between">
                                                     <div>
-                                                        <img src="image/Icon-12.png" alt="Digital Process Icon" class="process-icon">
+                                                        <img src="image/Icon-12.png" alt="Digital Process Icon" class="process-icon colored-icon">
                                                     </div>
                                                     <span>04</span>
                                                 </div>
