--- a/service.html
+++ b/service.html
@@ -72,7 +72,7 @@
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-2.png" alt="SEO Service Icon" class="img-fluid">
+                                            <img src="image/Icon-2.png" alt="SEO Service Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -100,7 +100,7 @@
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-4.png" alt="Website Development Icon" class="img-fluid">
+                                            <img src="image/Icon-4.png" alt="Website Development Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -128,7 +128,7 @@
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-7.png" alt="Mobile App Development Icon" class="img-fluid">
+                                            <img src="image/Icon-7.png" alt="Mobile App Development Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -156,7 +156,7 @@
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-4.png" alt="Web Application Development Icon" class="img-fluid">
+                                            <img src="image/Icon-4.png" alt="Web Application Development Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -184,7 +184,7 @@
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-5.png" alt="Performance Marketing Icon" class="img-fluid">
+                                            <img src="image/Icon-5.png" alt="Performance Marketing Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -212,7 +212,7 @@
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-6.png" alt="Video Production Icon" class="img-fluid">
+                                            <img src="image/Icon-6.png" alt="Video Production Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
@@ -240,7 +240,7 @@
                                 <div>
                                     <div class="service-icon-wrapper">
                                         <div class="service-icon">
-                                            <img src="image/Icon-7.png" alt="Social Media Management Icon" class="img-fluid">
+                                            <img src="image/Icon-7.png" alt="Social Media Management Icon" class="img-fluid colored-icon">
                                         </div>
                                     </div>
                                 </div>
