--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="banner-video-container keep-dark animate-box animated animate__animated" data-animate="animate__fadeInUp">
                 
                      <video autoplay muted loop playsinline id="banner-video-background">
-    <source src="./image/Marko Video Background.mp4" type="video/mp4">
+    <source src="./image/hero-bg.mp4" type="video/mp4">
     Your browser does not support the video tag.
   </video>
                
