--- a/portfolio.html
+++ b/portfolio.html
@@ -216,7 +216,7 @@
             </div>
         </div>
 
-        <!-- Section Guide -->
+        <!-- Section Guide
         <div class="section-guide">
             <div class="guide-banner">
                 <div class="hero-container">
@@ -236,7 +236,7 @@
             </div>
         </div>
 
-        <!-- Section Modal Video -->
+        Section Modal Video
         <div class="section p-0">
             <div id="modal-overlay" class="modal-overlay">
                 <span class="modal-close"><i class="fa-solid fa-xmark"></i></span>
@@ -244,7 +244,7 @@
                 <iframe id="modal-video-frame" class="ifr-video" allowfullscreen></iframe>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Section Testimonial -->
         <div class="section">
