--- a/service.html
+++ b/service.html
@@ -271,7 +271,7 @@
 </div>
         
         <!-- Section Guide -->
-        <div class="section-guide">
+        <!-- <div class="section-guide">
             <div class="guide-banner">
                 <div class="hero-container">
                     <div class="guide-content  animate-box animated animate__animated" data-animate="animate__fadeInUp">
@@ -288,9 +288,9 @@
                     </div>
                 </div>
             </div>
-        </div>
+        </div> -->
 
-        <!-- Section Modal Video -->
+        <!-- Section Modal Video
         <div class="section p-0">
             <div id="modal-overlay" class="modal-overlay">
                 <span class="modal-close"><i class="fa-solid fa-xmark"></i></span>
@@ -298,7 +298,7 @@
                 <iframe id="modal-video-frame" class="ifr-video" allowfullscreen></iframe>
                 </div>
             </div>
-        </div>
+        </div> -->
 
         <!-- Section Pricing -->
         <!-- <div class="section">
