--- a/header.html
+++ b/header.html
@@ -20,6 +20,7 @@
                       <li class="nav-item">
                         <a class="nav-link" aria-current="page" href="service.html">Services</a>
                     </li>
+               
                     <!-- <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
                             aria-expanded="false">
@@ -60,6 +61,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="contact.html">Contact Us</a>
+                    </li>
+                         <li class="nav-item">
+                        <a class="nav-link"  href="blog.html">Blogs</a>
                     </li>
                 </ul>
             </div>
