SEO fixes: canonical tags, redirects, metadata cleanup

--- a/footer.html
+++ b/footer.html
@@ -1,96 +1,123 @@
 <div class="section-footer">
-    <div class="bg-footer-wrapper">
-        <div class="bg-footer">
-            <div class="hero-container position-relative z-2">
-                <div class="d-flex flex-column gspace-2">
-                    <div class="row row-cols-xl-4 row-cols-md-2 row-cols-1 grid-spacer-5">
-                        <div class="col col-xl-4">
-                            <div class="footer-logo-container">
-                                <div class="logo-container-footer">
-                                    <img src="./image/logo.png" class="image-fluid footer-logo">
-                                </div>
-                                <h4>Driving Digital Growth with Innovation & Strategy</h4>
-                                <p>
-                                    Lorem ipsum dolor si consectetur adipiscing elit ut elit tellus luctus nec
-                                    ullamcorper mattis pulvinar dapibus leo.
-                                </p>
-                            </div>
-                        </div>
-                        <div class="col col-xl-2">
-                            <div class="footer-quick-links">
-                                <h5>Quick Links</h5>
-                                <ul class="footer-list">
-                                    <li><a href="./index.html">Home</a></li>
-                                    <li><a href="./about.html">About Us</a></li>
-                                    <li><a href="./service.html">Service</a></li>
-                                    <li><a href="./portfolio.html">Our Portfolio</a></li>
-                                    <li><a href="./blog.html">Blog</a></li>
-                                    <li><a href="./contact.html">Contact Us</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-xl-3">
-                            <div class="footer-services-container">
-                                <h5>Services</h5>
-                                <ul class="footer-list">
-                                    <li><a href="./searchengineoptimization.html">Search Engine Optimization</a></li>
-                                    <li><a href="./websitedevelopment.html">Website Development</a></li>
-                                    <li><a href="./mobileappdevelopment.html">Mobile App Development</a></li>
-                                    <li><a href="./webapplicationdevelopment.html">Web Application Development</a></li>
-                                    <li><a href="./performancemarketing.html">Performance Marketing</a></li>
-                                    <li><a href="./videoproduction.html">Video Production</a></li>
-                                    <li><a href="./socialmediamarketing.html">Social Media Management</a></li>
-                                </ul>
-                            </div>
-                        </div>
-                        <div class="col col-xl-3">
-                            <div class="footer-contact-container">
-                                <h5>Contact Info</h5>
-                                <ul class="contact-list">
-                                    <li>reachus@swiflare.com</li>
-                                    <li>+91 7871737666</li>
-                                    <li>W15, North Main Road, C- Sector, Anna Nagar West Extension, Chennai – 600101
-                                    </li>
-                                </ul>
-                                <div class="d-flex flex-column gspace-1">
-                                    <h5>Social Media</h5>
-                                    <div class="social-container">
-                                        <div class="social-item-wrapper">
-                                            <a href="https://facebook.com" class="social-item">
-                                                <i class="fa-brands fa-facebook"></i>
-                                            </a>
-                                        </div>
-                                        <div class="social-item-wrapper">
-                                            <a href="https://youtube.com" class="social-item">
-                                                <i class="fa-brands fa-youtube"></i>
-                                            </a>
-                                        </div>
-                                        <div class="social-item-wrapper">
-                                            <a href="https://instagram.com" class="social-item">
-                                                <i class="fa-brands fa-instagram"></i>
-                                            </a>
-                                        </div>
-                                        <div class="social-item-wrapper">
-                                            <a href="https://linkedin.com" class="social-item">
-                                                <i class="fa-brands fa-linkedin"></i>
-                                            </a>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="footer-content-spacer"></div>
+  <div class="bg-footer-wrapper">
+    <div class="bg-footer">
+      <div class="hero-container position-relative z-2">
+        <div class="d-flex flex-column gspace-2">
+          <div class="row row-cols-xl-4 row-cols-md-2 row-cols-1 grid-spacer-5">
+            <div class="col col-xl-4">
+              <div class="footer-logo-container">
+                <div class="logo-container-footer">
+                  <img src="./image/logo.png" class="image-fluid footer-logo" />
                 </div>
-                <div class="copyright-container">
-                    <span class="copyright">© 2025 Swiflare AI Innovations. All rights reserved.</span>
-                    <div class="d-flex flex-row gspace-2">
-                        <a href="#" class="legal-link">Terms of Service</a>
-                        <a href="#" class="legal-link">Privacy Policy</a>
-                    </div>
-                </div>
-                <div class="footer-spacer"></div>
+                <h4>Driving Digital Growth with Innovation & Strategy</h4>
+                <p>
+                  Lorem ipsum dolor si consectetur adipiscing elit ut elit
+                  tellus luctus nec ullamcorper mattis pulvinar dapibus leo.
+                </p>
+              </div>
             </div>
+            <div class="col col-xl-2">
+              <div class="footer-quick-links">
+                <h5>Quick Links</h5>
+                <ul class="footer-list">
+                  <li><a href="./index.html">Home</a></li>
+                  <li><a href="./about.html">About Us</a></li>
+                  <li><a href="./service.html">Service</a></li>
+                  <li><a href="./portfolio.html">Our Portfolio</a></li>
+                  <li><a href="./blog.html">Blog</a></li>
+                  <li><a href="./contact.html">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+            <div class="col col-xl-3">
+              <div class="footer-services-container">
+                <h5>Services</h5>
+                <ul class="footer-list">
+                  <li>
+                    <a href="./searchengineoptimization.html"
+                      >Search Engine Optimization</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./websitedevelopment.html">Website Development</a>
+                  </li>
+                  <li>
+                    <a href="./mobileappdevelopment.html"
+                      >Mobile App Development</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./webapplicationdevelopment.html"
+                      >Web Application Development</a
+                    >
+                  </li>
+                  <li>
+                    <a href="./performancemarketing.html"
+                      >Performance Marketing</a
+                    >
+                  </li>
+                  <li><a href="./videoproduction.html">Video Production</a></li>
+                  <li>
+                    <a href="./socialmediamarketing.html"
+                      >Social Media Management</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+            <div class="col col-xl-3">
+              <div class="footer-contact-container">
+                <h5>Contact Info</h5>
+                <ul class="contact-list">
+                  <li>reachus@swiflare.com</li>
+                  <li>+91 7871737666</li>
+                  <li>
+                    W15, North Main Road, C- Sector, Anna Nagar West Extension,
+                    Chennai – 600101
+                  </li>
+                </ul>
+                <div class="d-flex flex-column gspace-1">
+                  <h5>Social Media</h5>
+                  <div class="social-container">
+                    <div class="social-item-wrapper">
+                      <a href="https://facebook.com" class="social-item">
+                        <i class="fa-brands fa-facebook"></i>
+                      </a>
+                    </div>
+                    <div class="social-item-wrapper">
+                      <a href="https://youtube.com" class="social-item">
+                        <i class="fa-brands fa-youtube"></i>
+                      </a>
+                    </div>
+                    <div class="social-item-wrapper">
+                      <a href="https://instagram.com" class="social-item">
+                        <i class="fa-brands fa-instagram"></i>
+                      </a>
+                    </div>
+                    <div class="social-item-wrapper">
+                      <a href="https://linkedin.com" class="social-item">
+                        <i class="fa-brands fa-linkedin"></i>
+                      </a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="footer-content-spacer"></div>
         </div>
+        <div class="copyright-container">
+          <span class="copyright"
+            >© <span id="current-year">2025</span> Swiflare AI Innovations. All
+            rights reserved.</span
+          >
+          <div class="d-flex flex-row gspace-2">
+            <a href="#" class="legal-link">Terms of Service</a>
+            <a href="#" class="legal-link">Privacy Policy</a>
+          </div>
+        </div>
+        <div class="footer-spacer"></div>
+      </div>
     </div>
+  </div>
 </div>
