SEO fixes: canonical tags, redirects, metadata cleanup

--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
                                         <div class="card card-about animate-box animated animate__animated" data-animate="animate__fadeInDown">
                                             <div class="d-flex flex-row align-items-center">
                                                 <span class="counter" data-target="5"></span>
-                                                <span class="counter-detail">5+</span>
+                                                <span class="counter-detail">+</span>
                                             </div>
                                             <h6>Years of Experience on Digital Marketing Services</h6>
                                         </div>
